More javadoc configuration properties
git-svn-id: https://svn.kuali.org/repos/student/deploymentlab/trunk@18647 0ac02d80-fb3f-11dc-a574-c57244a850eb